# viam-candy-bucket

./: .env.example  .gitignore  Makefile  README.md  dietpi.txt.example  main.py  meta.json  pyproject.toml  requirements.txt  setup.sh
src/: main.py
src/code/: __init__.py  api.py  candy_bucket.py
src/proto/: code.proto  code_grpc.py  code_pb2.py  code_pb2.pyi
